--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         }
     ],
     "require": {
+        "php": ">=8.1",
         "symfony/translation": "^6.4",
         "symfony/string": "^6.4",
         "symfony/yaml": "^6.4"
