--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "jdz/language",
     "type": "library",
-    "description": "JDZ Translator",
+    "description": "JDZ Translator (i18n) and Inflector library based on Symfony components",
     "keywords": [
         "JDZ",
         "i18n",
@@ -20,14 +20,25 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
-        "symfony/translation": "^7.2",
-        "symfony/string": "^7.2",
-        "symfony/yaml": "^7.2"
+        "php": ">=8.2",
+        "symfony/translation": "^7.4",
+        "symfony/string": "^7.4",
+        "symfony/yaml": "^7.4"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0"
     },
     "autoload": {
         "psr-4": {
             "JDZ\\Language\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "JDZ\\Language\\Tests\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "phpunit --colors=always --testdox"
     }
 }
